# Ziba

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts
.capy/: pr-body-synapsium-mvp.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.husky/: pre-commit
apps/desktop/: .gitignore  electron-builder.yml  electron.vite.config.ts  index.html  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vitest.config.ts
apps/desktop/electron/: main.ts  preload.ts  schema-loader.ts  security.ts  state.ts
apps/desktop/shared/: ipc.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
docs/: architecture.md  name.md  siyuan-reference-notes.md  vault-format.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-10-v1.0-phase1-schema-indexer.md  2026-05-10-v1.0-phase3-editor-relations.md  (+2 more)
public/: manifest.webmanifest
scripts/: seed-vault.mjs
src/: index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Editor.tsx  GalleryView.tsx  GraphView.tsx  MarkdownBody.tsx  PreviewCard.tsx  TableView.tsx  TimelineView.tsx
src/lib/: ai.ts  config.ts  graph.ts  parsers.ts  readwise.ts  schemas.ts  templates.ts
src/pages/: Category.tsx  Chat.tsx  Highlights.tsx  Home.tsx  Note.tsx  Settings.tsx
src/store/: index.ts  settings.ts
(+232 files in other folders)
